# fileio

./: CMakeLists.txt
include/: fileio.h
include/fileio/: allocator_traits.h  allocator_util.h  charmap.h  file.h  file_stream.h  functional.h  lock_guard.h  memory_util.h  pointer_traits.h  polymorphic_allocator.h  traits_adaptors.h  uses_allocator_wrapper.h
src/: char_traits.h  file.cc  file_stream.cc  file_wide.cc  fileio.cc  polymorphic_allocator.cpp  string_algo.h
tests/: catch.hpp  polymorphic_allocator.t.cpp  test_data.h  test_line_printing.cc  test_local_files.cc  test_lockable.cc  test_reading.cc  test_std_streams.cc  test_type_erasure.cc  test_wide.cc  test_writing.cc  uses_allocator_wrapper.t.cpp
tools/: specs.msvcr110
